@@ -41,8 +41,12 @@
 <font size="3"><span style="font-style: italic;">Note: the SilverLink
 cable must be plugged before starting TiLP !</span><br
  style="font-style: italic;">
-<span style="font-style: italic;">Note: your USB hand-held must be ON
-before starting TiLP and before doing any operation !</span><br>
+<span style="font-style: italic;"><br>
+Note: your USB hand-held must be ON
+before starting TiLP and before doing any operation ! If the hand-held
+turns off while TiLP is running, you will have to turn it ON again and
+you may have to press the 'Ready' button in
+order to re-enable the device connection.</span><br>
 <br>
 This section describes the different things you
 can do with your calculator and TiLP.</font>
@@ -93,7 +97,8 @@ may be unavailable. The chart below sums up the available operations:</font>
       </td>
     </tr>
     <tr>
-      <td>Ready </td>
+      <td>Ready<br>
+      </td>
       <td style="text-align: center;" valign="center" width="50">* </td>
       <td style="text-align: center;" valign="center" width="50">&nbsp;</td>
       <td style="text-align: center;" valign="center" width="50">&nbsp;</td>
@@ -332,6 +337,9 @@ or by Drag and Drop (DnD for short). <br>
 calculator is ready for transmission. Usually, you don't need to use it
 since TiLP automatically uses this operation whenever you do a
 transfer, but it may be useful to restore the connection after an error.<br>
+      <span style="font-style: italic;">Note:</span> this button has an
+add-on when using a DirectLink cable; it allows to reopen device
+connection without restarting TiLP-II.<br>
       </font></td>
     </tr>
   </tbody>
